# Kairos

./: Cargo.toml  DESARROLLO.md  Dockerfile.backend  Dockerfile.frontend  INSTRUCCIONES_ARRANQUE.md  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  init.sql  nginx.conf  quick_test.sh  start.ps1  start_local.sh  test_frontend.sh  test_server.sh
backend/: Cargo.toml  diesel.toml
backend/backups/20250711_140613/: schema_backup_140706.rs
backend/migrations/2024_06_18_000000_initial_schema/: down.sql  up.sql
backend/migrations/2025-07-06-044324_add_status_to_producers/: down.sql  up.sql
backend/migrations/2025-07-06-072409_add_role_enum_type/: down.sql  up.sql
backend/src/: config.rs  database.rs  errors.rs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs
backend/src/handlers/: auth.rs  brand_configs.rs  category_configs.rs  configs.rs  customer_configs.rs  department_configs.rs  employee_configs.rs  events.rs  group_configs.rs  level_configs.rs  location_configs.rs  logs.rs  lot_configs.rs  lots.rs  mod.rs  notifications.rs  payments.rs  permissions.rs  producers.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/public/: index.html  styles.css
frontend/src/: lib.rs  main.rs
frontend/src/components/: login_form.rs  mod.rs
frontend/src/components/common/: language_selector.rs  mod.rs
frontend/src/hooks/: mod.rs  use_i18n.rs
frontend/src/i18n/: mod.rs
frontend/src/pages/: dashboard.rs  mod.rs
kairos-common/: Cargo.toml
kairos-common/src/: lib.rs
