[package]
name = "kairos-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-rt = "2.9"
r2d2 = "0.8.10"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "r2d2", "chrono", "serde_json", "numeric"] }
# diesel-derive-enum = { version = "2.1.0", features = ["postgres"] } # ELIMINADA
diesel_migrations = { version = "2.1", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3"
futures-util = "0.3"
derive_more = "0.99"
rust_decimal = { version = "1.34", features = ["serde", "db-diesel-postgres"] }
actix-cors = "0.7.1"
kairos-common = { path = "../kairos-common" }
