[package]
name = "kairos-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5.0", features = ["web", "router"] }
dioxus-web = "0.5.0"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
gloo-net = "0.3.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console", 
    "Window", 
    "Document", 
    "Element", 
    "HtmlElement", 
    "Node",
    "Navigator",
    "Storage",
    "Location"
]}
once_cell = "1.19"
kairos-common = { path = "../kairos-common" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"] 

[[bin]]
name = "kairos-frontend"
path = "src/main.rs" 