[package]
name = "kairos-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34", features = ["serde"] }

[target.'wasm32-unknown-unknown'.dependencies]
uuid = { version = "1.7", features = ["v4", "serde", "js"] }
